syntax = "proto3";
option go_package = "Auction/grpc/proto";

message Empty {}

enum Status {
    SUCCESS = 0;
    FAIL = 1;
    EXCEPTION = 2;
}

message Acknowledgement {
    Status status = 1;
}

message Bid {
    string node = 1;
    int32 amount = 2;
}

message Outcome{
    Bid winingbid = 1;
    bool auctionFinished = 2;
}

service AuctionService {
    rpc SendBid(Bid) returns (Acknowledgement);
    rpc Result(Empty) returns (Outcome);
    rpc HealthCheck(Empty) returns (Outcome);
}